--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-countdown": "",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
@@ -88,4 +88,3 @@
     ]
   }
 }
-
